Fix search input UI in `FindOrCreateEntity` dialog: * Use common `SearchInput` and `NoSearchResults` components in the dialog; * Debounce search input when performing a lookup for an existing entity in the dialog; * Fix loading spinner alignment, display error state as well; * Reduce `NoSearchResults` text color a bit.

--- a/styles/editor/_form.scss
+++ b/styles/editor/_form.scss
@@ -79,6 +79,14 @@
     overflow-y: scroll;
   }
 
+  &__results-spinner {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
   &__separator {
     margin: 7px 0;
     overflow: hidden;
